--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ DB_HOST=localhost
 DB_PORT=54320
 TEACHER_COUNT=1000000
 SCHOOL_COUNT=40000
+SCHOOLCHILDREN_COUNT=1700000
+NUMBER_OF_VARIANTS_PER_SUBJECT=50
+NUMBER_OF_VARIANTS_PER_TASK=50
