--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ DB_USER=root
 DB_PASSWORD=root
 DB_HOST=localhost
 DB_PORT=54320
-TEACHER_COUNT=1000000
-SCHOOL_COUNT=40000
-SCHOOLCHILDREN_COUNT=1700000
+TEACHER_COUNT=1000 #1000000
+SCHOOL_COUNT=100 #40000
+SCHOOLCHILDREN_COUNT=5000 # 1700000
 NUMBER_OF_VARIANTS_PER_SUBJECT=50
 NUMBER_OF_VARIANTS_PER_TASK=50
